--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Game",
   "main": "units.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "keywords": [
     "game",
