Add frontend dependency

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "author": "Sam Hodak",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "mocha": "^8.2.1"
