--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Sam Hodak",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "css-loader": "^5.0.1",
     "express": "^4.17.1",
     "react": "^17.0.1",
