Add background image; restyle flex boxes, buttons

--- a/package.json
+++ b/package.json
@@ -21,20 +21,22 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "css-loader": "^5.0.1",
     "express": "^4.17.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.7.0"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "babel-loader": "^8.2.1",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.8.0",
     "webpack-cli": "^4.2.0"
   }
 }
