--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,7 +18,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
-    - run: npm ci
-    - run: npm test
+      run: npm ci
+    - name: Run tests
+      run: npm test
       env:
         CI: true
