--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Game",
   "main": "units.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha --recursive",
-    "ci-tests": "./node_modules/mocha/bin/mocha --recursive 2>&1 | tee ./test/ci-test-log.out",
+    "test-server": "./node_modules/mocha/bin/mocha --recursive",
+    "ci-server-tests": "./node_modules/mocha/bin/mocha --recursive 2>&1 | tee ./test/ci-server-test-log.out",
     "build": "webpack --config webpack.config.js",
     "react-dev": "webpack --config webpack.config.js --watch",
     "start": "node ./server/server.js",
