--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Game",
   "main": "units.js",
   "scripts": {
+    "test-client": "jest",
     "test-server": "./node_modules/mocha/bin/mocha --recursive",
     "ci-server-tests": "./node_modules/mocha/bin/mocha --recursive 2>&1 | tee ./test/ci-server-test-log.out",
     "build": "webpack --config webpack.config.js",
@@ -33,8 +34,10 @@
     "babel-loader": "^8.2.1",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
+    "jest": "^26.6.3",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
+    "react-test-renderer": "^17.0.1",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.8.0",
