Fix-specify mocha test directory

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "units.js",
   "scripts": {
     "test-client": "jest",
-    "test-server": "./node_modules/mocha/bin/mocha --recursive",
-    "ci-server-tests": "./node_modules/mocha/bin/mocha --recursive 2>&1 | tee ./test/ci-server-test-log.out",
+    "test-server": "./node_modules/mocha/bin/mocha 'test/server' --recursive",
+    "ci-server-tests": "./node_modules/mocha/bin/mocha 'test/server' --recursive 2>&1 | tee ./test/ci-server-test-log.out",
     "build": "webpack --config webpack.config.js",
     "react-dev": "webpack --config webpack.config.js --watch",
     "start": "node ./server/server.js",
