--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "rot-js": "^2.1.5"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
