--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "chalk": "^4.1.0",
     "express": "^4.17.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "ws": "^7.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
